--- a/MVP/mvp_fragment/app/build.gradle
+++ b/MVP/mvp_fragment/app/build.gradle
@@ -38,11 +38,16 @@ android {
 
 dependencies {
     var room_version = "2.5.0"
+    var fragment_version = "1.5.5"
 
     // Room
     implementation("androidx.room:room-runtime:$room_version")
     kapt("androidx.room:room-compiler:$room_version")
     implementation "androidx.room:room-ktx:$room_version"
+
+    // Fragment
+    implementation ("androidx.fragment:fragment:1.5.5")
+    implementation ("androidx.fragment:fragment-ktx:$fragment_version")
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
