Codelab LiveData 완료

--- a/codelab/android-basics-kotlin-unscramble-app-starter/app/build.gradle
+++ b/codelab/android-basics-kotlin-unscramble-app-starter/app/build.gradle
@@ -21,7 +21,7 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.android.unscramble"
@@ -47,7 +47,7 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
-        viewBinding true
+        dataBinding true
     }
 }
 
